--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -2,14 +2,14 @@
 <form action="/super_hero" method="post">
   <label for="team[name]">Pirate name:</label><input type="text" name="pirate[name]" id="pirate[name]"><br>
   <label for="team[motto]">Pirate weight:</label><input type="text" name="pirate[weight]" id="pirate[weight]"><br>
-  <label for="member1_name">Member 1 name:</label><input type="text" name="pirate[members][][name]" id="member"><br>
-  <label for="member1_power">Member 1 power:</label><input type="text" name="pirate[members][][power]" id="member"><br>
-  <label for="member1_bio">Member 1 biography:</label><input type="text" name="pirate[members][][bio]" id="member"><br>
-  <label for="member2_name">Member 2 name:</label><input type="text" name="pirate[members][][name]" id="member"><br>
-  <label for="member2_power">Member 2 power:</label><input type="text" name="pirate[members][][power]" id="member"><br>
-  <label for="member2_bio">Member 2 biography:</label><input type="text" name="pirate[members][][bio]" id="member"><br>
-  <label for="member3_name">Member 3 name:</label><input type="text" name="pirate[members][][name]" id="member"><br>
-  <label for="member3_power">Member 3 power:</label><input type="text" name="pirate[members][][power]" id="member"><br>
-  <label for="member3_bio">Member 3 biography:</label><input type="text" name="pirate[members][][bio]" id="member"><br>
+  <label for="member1_name">Member 1 name:</label><input type="text" name="pirate[members][][name]" id="member1_name"><br>
+  <label for="member1_power">Member 1 power:</label><input type="text" name="pirate[members][][power]" id="member1_power"><br>
+  <label for="member1_bio">Member 1 biography:</label><input type="text" name="pirate[members][][bio]" id="member1_bio"><br>
+  <label for="member2_name">Member 2 name:</label><input type="text" name="pirate[members][][name]" id="member2_name"><br>
+  <label for="member2_power">Member 2 power:</label><input type="text" name="pirate[members][][power]" id="member2_power"><br>
+  <label for="member2_bio">Member 2 biography:</label><input type="text" name="pirate[members][][bio]" id="member2_bio"><br>
+  <label for="member3_name">Member 3 name:</label><input type="text" name="pirate[members][][name]" id="member3_name"><br>
+  <label for="member3_power">Member 3 power:</label><input type="text" name="pirate[members][][power]" id="member3_power"><br>
+  <label for="member3_bio">Member 3 biography:</label><input type="text" name="pirate[members][][bio]" id="member3_bio"><br>
   <input type="submit" id="Submit">
 </form>
