Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,5 +1,5 @@
 <h1>Create a Team and Heroes!</h1>
-<form action="/super_hero" method="post">
+<form action="/teams" method="post">
   <label for="team[name]">Pirate name:</label><input type="text" name="pirate[name]" id="pirate[name]"><br>
   <label for="team[motto]">Pirate weight:</label><input type="text" name="pirate[weight]" id="pirate[weight]"><br>
   <label for="member1_name">Member 1 name:</label><input type="text" name="pirate[members][][name]" id="member1_name"><br>
