Automatically backed up by Learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -11,5 +11,5 @@
   <label for="member3_name">Member 3 name:</label><input type="text" name="team[members][][name]" id="member3_name"><br>
   <label for="member3_power">Member 3 power:</label><input type="text" name="team[members][][power]" id="member3_power"><br>
   <label for="member3_bio">Member 3 biography:</label><input type="text" name="team[members][][bio]" id="member3_bio"><br>
-  <input type="submit" id="Submit">
+  <input type="submit" id="submit">
 </form>
