--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,5 +1,6 @@
-<!-- <h1>Create a Team and Heroes!</h1>
+<h1>Create a Team and Heroes!</h1>
 <form action="/teams" method="post">
+  binding.pry
   <label for="team[name]">Team name:</label><input type="text" name="team[name]" id="team[name]"><br>
   <label for="team[motto]">Team motto:</label><input type="text" name="team[motto]" id="team[motto]"><br>
   <label for="member1_name">Member 1 name:</label><input type="text" name="team[members][][name]" id="member1_name"><br>
@@ -12,4 +13,4 @@
   <label for="member3_power">Member 3 power:</label><input type="text" name="team[members][][power]" id="member3_power"><br>
   <label for="member3_bio">Member 3 biography:</label><input type="text" name="team[members][][bio]" id="member3_bio"><br>
   <input type="submit" id="submit">
-</form> -->
+</form>
