--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -4,13 +4,13 @@
 <h2>Team Motto: <%= @team.motto  %></h2>
 
 <h2>Hero Name: <%= @member1.name %></h2>
-<p>Name: <%= @member1.power %></p>
-<p>Name: <%= @member1.bio %></p>
+<p>Hero Power: <%= @member1.power %></p>
+<p>Hero Biography: <%= @member1.bio %></p>
 
 <h2>Hero Name: <%= @member2.name %></h2>
-<p>Name: <%= @member2.power %></p>
-<p>Name: <%= @member2.bio %></p>
+<p>Hero Power: <%= @member2.power %></p>
+<p>Hero Biography: <%= @member2.bio %></p>
 
 <h2>Hero Name: <%= @member3.name %></h2>
-<p>Name: <%= @member3.power %></p>
-<p>Name: <%= @member3.bio %></p>
+<p>Hero Power: <%= @member3.power %></p>
+<p>Hero Biography: <%= @member3.bio %></p>
